samples/_failures_safe/1761346651_e4b0a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b30f89b8.c: In function ‘main’:
./samples/SAFE/__tmp_b30f89b8.c:143:17: error: expected ‘;’ at end of input
  143 |         add_edge
      |                 ^
      |                 ;
./samples/SAFE/__tmp_b30f89b8.c:143:9: error: expected declaration or statement at end of input
  143 |         add_edge
      |         ^~~~~~~~
./samples/SAFE/__tmp_b30f89b8.c:143:9: error: expected declaration or statement at end of input
